feat(test): fully covered the JackTokenizer class with its corresponding test suite.